# aictrl

./: README.md  pyproject.toml
.github/workflows/: location-telemetry.yml
aictrl/: __init__.py  __main__.py  cli.py  phases.py
aictrl/commands/: __init__.py  attest.py  authz.py  boot.py  crypto.py  demo.py  doctor.py  evidence.py  exec.py  pr.py  sandbox.py  status.py  support_bundle.py
aictrl/schemas/: doctor.schema.json  status.schema.json
aictrl/util/: __init__.py  errors.py  invariants.py  json_utils.py  location.py  safe_exec.py
baseline/: README.md  baseline_manifest.json  baseline_tests.yaml  compare_baselines.py  run_baseline.py
baseline/results/: .gitignore  .gitkeep  aictrl-baseline-manifest.json  aictrl_baseline_2026-02-01T211229Z.json  aictrl_baseline_2026-02-04T001503Z.json  aictrl_baseline_2026-02-04T001554Z.json  aictrl_baseline_2026-02-04T002412Z.json  aictrl_baseline_2026-02-04T002534Z.json  aictrl_baseline_2026-02-04T003020Z.json  aictrl_baseline_2026-02-05T040609Z.json  aictrl_baseline_2026-02-05T043345Z.json  aictrl_spec_coverage_2026-02-04T001503Z.json  aictrl_spec_coverage_2026-02-04T001554Z.json
docs/phases/: PHASE_11_SIGNED_ATTESTATION.md  (+8 more)
tests/: __init__.py  conftest.py  forbidden_import_demo.py  test_ascii_output.py  test_attest.py  test_authz.py  test_boot.py  test_crypto.py  test_demo.py  test_doctor_network.py  test_doctor_schema.py  test_evidence.py  test_exec.py  test_invariants.py  test_location.py  test_pr.py  test_safe_exec.py  test_sandbox.py  test_shim.py  test_status_schema.py  test_support_bundle.py
(+9 files in other folders)
