[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictrl"
version = "1.4.0"
description = "AICtrl - Portable AI Control Plane CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Travis Goodyke"}
]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]

[project.scripts]
aictrl = "aictrl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aictrl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
